--- a/style.css
+++ b/style.css
@@ -7,16 +7,25 @@ body{
 }
 
 nav {
-    padding: 10px; /* Add padding around the links */
+    height: fit-content;
     background-color: #f4f4f4; /* Add a light grey background color */
     border-bottom: 1px solid #ccc; /* Add a grey border at the bottom */
 }
 
-nav ul, nav li{
+nav ul{
     list-style-type: none; /* Remove the bullet points from the list */
-    margin: 0; /* Remove the default margin */
-    padding: 0; /* Remove the default padding */
-    display: inline; /* Display the list items horizontally */
+    align-items: center;
+}
+
+nav ul * {
+    background-color: #ccc;
+    display: inline-flex;
+    border-radius: 10%;
+}
+
+
+#loginform {
+    
 }
 
 nav a {
