--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 :root {
-  --primary-color: blue;
-  --secondary-color: grey;
-  --text-color: black;
-  --header-height: 10%;
+  --primary-color: #BB3E00;
+  --secondary-color: #F7AD45;
+  --background-color: #FFF1D7;
+  --text-color: #FFFF;
+  --header-height: 5rem;
 }
 
 * {
@@ -14,7 +15,8 @@
 }
 
 body{
-  background-color: #f4f4f4; /* Add a light grey background color */
+  background: var(--background-color);
+  background: radial-gradient(circle, rgba(255,241,215,1) 0%, rgba(255,232,190,1) 65%, rgba(255,222,160,1) 100%);
   color: var(--text-color);
   margin: 0;
   padding: 0;
@@ -23,61 +25,91 @@ body{
 main {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
-  margin: 5% 5% 0 5%;
-  background-color: antiquewhite;
+  margin: 5% 10% 0 10%;
+  height: 100vh;
 }
 
 header {
-    background-color: #333; /* Add a dark grey background color */
-    color: #fff; /* Set the text color to white */
+    background-color: var(--primary-color);
+    color: --text-color;
     position: fixed;
     width: 100%;
     height: var(--header-height);
     top: 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    z-index: 1000;
 }
 
 nav ul{
-    list-style-type: none; /* Remove the bullet points from the list */
-}
-
-nav ul * {
-    background-color: #ccc;
+    list-style-type: none;
     display: inline-flex;
-    border-radius: 10%;
 }
 
 nav a {
-    padding: 0 10px; /* Add padding to the left and right of each link */
-    text-decoration: none; /* Remove the underline from the links */
-    color: #333; /* Set the text color to a dark grey */
+    padding: 0 1rem; /* Add padding to the left and right of each link */
+    text-decoration: none;
+    color: var(--text-color); /* Set the text color to a dark grey */
 }
 
 nav a:hover {
-    color: #007bff; /* Change the text color to blue when hovering over a link */
+    color: var(--secondary-color); /* Change the text color to blue when hovering over a link */
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    margin-left: 10%;
+}
+.user-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10%;
+    padding: 0.5%;
+    background-color: var(--secondary-color);
+    border-radius: 2.5%;
+}
+.user-info img {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    margin-right: 0.5rem;
+}
+.user-info span {
+    font-size: 1rem;
+    margin-right: 0.5rem;
+}
+
+.home-page {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .slider {
     width: 100%;
-    height: 300px;
+    height: 20rem;
     overflow: hidden;
     position: relative;
-    background-color: #333;
+    background-color: var(--secondary-color);
 }
 
 .create {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    background-color: #333;
-    margin-top: 3%;
+    flex-direction: column;
+    width: 70%;
+    background-color: var(--secondary-color);
+    margin-top: 5%;
+    padding: 2%;
 }
 
 footer {
-  bottom: 0;
   width: 100%;
 }
