--- a/css/style.css
+++ b/css/style.css
@@ -88,12 +88,30 @@ nav a:hover {
     margin-right: 0.5rem;
 }
 
-.home-page {
+#home-page {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
+
+#menu-page{
+  width: 100%;
+  display: none;
+  align-items: center;
+  flex-direction: column;
+}
+#pizza-grid{
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+}
+
+#pizza-page{
+  width: 100%;
+  display: none;
+  align-items: center;
+  flex-direction: column;
+} 
 
 .slider {
     width: 100%;
