--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@ header {
     font-family: var(--header-font);
 }
 
+header img {
+  width: 3rem;
+  height: 3rem;
+}
+
 nav ul{
     list-style-type: none;
     display: inline-flex;
@@ -118,7 +123,7 @@ nav a:hover {
   display: none;
   align-items: center;
   flex-direction: column;
-} 
+}
 
 .slider {
     width: 100%;
@@ -127,6 +132,70 @@ nav a:hover {
     position: relative;
     background: var(--secondary-gradient);
     box-shadow: var(--shadow);
+    margin-top: 5%;
+    border: 3px solid var(--secondary-color);
+}
+
+.sliderFade {
+  display: none;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+.slideNumber {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  background-color: #717171;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 .create {
