--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,8 @@ nav a:hover {
 }
 
 .slider {
-    width: 100%;
-    height: 20rem;
+    width: 60%;
+    aspect-ratio: 16/9;
     overflow: hidden;
     position: relative;
     background: var(--secondary-gradient);
