--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ nav a:hover {
     color: var(--secondary-color);
     text-decoration: underline;
 }
+nav .active {
+    color: var(--secondary-color);
+    text-decoration: underline;
+}
 
 .logo {
     display: flex;
@@ -214,7 +218,7 @@ nav a:hover {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-.active, .dot:hover {
+.dot.active, .dot:hover {
   background-color: #717171;
 }
 .fade {
