--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body{
   color: var(--text-color);
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 main {
@@ -33,13 +36,7 @@ main {
   align-items: center;
   flex-direction: column;
   margin: 5% 10% 0 10%;
-  height: 100vh;
-}
-
-#background {
-
-  height: 100%;
-
+  min-height: 100vh;
 }
 
 header {
@@ -146,20 +143,27 @@ nav .active {
 
 #menu-page {
   width: 100%;
-  height: 80%;
-  position: relative;
+  margin : 10% 0 10% 0;
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background: var(--secondary-gradient);
+  background: transparent;
   padding: 5%;
   box-shadow: var(--shadow);
 }
 
+#menu-page h2 {
+  font-family: var(--header-font);
+  font-size: 1.5rem;
+  margin-bottom: 2%;
+  text-shadow: 2px 2px 4px black;
+}
+
 #pizza-grid {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 5%;
   width: 100%;
   justify-items: center;
@@ -174,15 +178,15 @@ nav .active {
 #pizza-grid a {
   text-decoration: none;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   color: var(--text-color);
   background-color: #BB3E00;
-  margin: 10%;
+  margin: 2%;
   padding: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   overflow: hidden;
 }
 
@@ -294,7 +298,9 @@ nav .active {
 
 footer {
   width: 100%;
+  height: 5rem;
   background: var(--primary-gradient);
   font-family: var(--text-font);
   padding: 0.5rem 1rem;
+  display: none;
 }
