--- a/css/style.css
+++ b/css/style.css
@@ -221,3 +221,67 @@ footer {
   background: var(--primary-gradient);
   font-family: var(--text-font);
 }
+
+
+/* shopping cart */
+.shoppingCart {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.shoppingCart svg {
+  width: 48px;
+  height: 48px;
+  margin-right: 30px;
+}
+
+/* Luo oma pizza -sivun tyyli */
+#create-page {
+    display: none; /* Piilota oletusarvoisesti */
+    padding: 20px;
+    background-color: bisque;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    margin-top: -50px;
+    width: 30%;
+}
+
+
+#toppings-container li {
+    padding: 5px;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+label {
+    font-size: 16px;
+    color: var(--text-color);
+}
+
+button {
+    padding: 10px 15px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background-color: var(--secondary-color);
+}
+
+:root {
+    --primary-color: #BB3E00;
+    --secondary-color: #F7AD45;
+    --background-color: #FFF1D7;
+    --text-color: #333;
+}
+
+
