--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,11 @@ nav .active {
   border: 1px black solid;
 }
 
+#pizza-grid a:hover {
+  cursor: pointer;
+  background: var(--secondary-gradient);
+}
+
 .pizza-info {
   display: flex;
   width: 100%;
@@ -224,6 +229,27 @@ nav .active {
   align-items: center;
   flex-direction: column;
 }
+
+.dialog {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--secondary-gradient);
+  color: black;
+  padding: 20px;
+  border: 1px solid black;
+  margin-top: 3.5%;
+}
+
+.dialog img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+}
+
+
 
 .slider {
     width: 60%;
