--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ nav .active {
 
 #menu-page {
   width: 100%;
-  margin : 10% 0 10% 0;
+  margin : 7% 0 10% 0;
   position: relative;
   display: flex;
   align-items: center;
@@ -157,26 +157,13 @@ nav .active {
   padding: 5%;
 }
 
-.menu-title {
-  border: 2px solid black;
-  padding: 0.2rem;
-  min-height: fit-content;
-  min-width: fit-content;
-}
-.menu-title div {
-  border: 2px dashed black;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu-title div h2 {
-  font-family: var(--menu-font);
-  color: white;
-  font-size: 1.5rem;
-  margin-bottom: 2%;
-  text-shadow: 2px 2px 4px black;
+.menu-title h2 {
+  font-family: var(--header-font);
+  color: var(--white);
+  font-size: 3rem;
+  margin-bottom: 4%;
+  border: 2px solid var(--primary-color);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #pizza-grid {
