--- a/css/style.css
+++ b/css/style.css
@@ -459,14 +459,13 @@ button:hover {
   display: none;
 }
 
-
-/* Näytä ostoskori kun se on avattu */
 .cart-item-image {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   margin-right: 10px;
 }
+
 .cart-item-text{
   font-size: 16px;
 }
@@ -607,6 +606,12 @@ button:hover {
   #home-page .create {
     width: 100%;
     text-align: center;
+  }
+
+  .cart-items {
+    width: 300px;
+    right: 0;
+    top: 50px;
   }
 
 
